静的なページと別の動的なページを追加した。

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
     <header>
         <meta charset="utf-8">
-        <!-- app.jsなどのjsファイルを読み込む部分のタグは
-            webpackのhtml-loaderプラグインで勝手に
-            追加してくれるので記述しない。 -->
     </header>
     <body>
-        <div id="root"></div>
+        <ul>
+            <li><a href="index1.html">押してボタンのあるHello world的なページ</a></li>
+            <li><a href="index2.html">Hello World</a></li>
+        </ul>
     </body>
 </html>
